Update AboutPage and Alert samples for 3.0.0-alpha.9